# adventofcode-2020

./: README.md  aoc.cabal  hie.yaml
app/: Common.hs  Day01.hs  Main.hs
