cabal-version: 2.4
name:          aoc
version:       0.1.0.0

common deps
  default-language:   GHC2021
  default-extensions:
    DuplicateRecordFields
    LambdaCase
    OverloadedRecordDot
    OverloadedStrings
    RecordWildCards

  ghc-options:        -Wall
  build-depends:
    , base        >=4        && <5
    , containers  ^>=0.6.0
    , extra       ^>=1.7.10
    , split       ^>=0.2.3.5
    , text        ^>=2.0.1
    , time        ^>=1.12

  other-modules:
    Common
    Day01

executable aoc
  import:         deps
  main-is:        Main.hs
  hs-source-dirs: app
